--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="/assets/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <title>
         CALCULADORA
     </title>
@@ -62,7 +62,7 @@
     </div>
     <!-- Ends -->
 
-    <script src="/scripts/script.js"></script>
+    <script src="/script.js"></script>
     
 </body>
 </html>
